@@ -594,7 +594,14 @@ class ITPParser(TopologyReaderBase):
         if all(e.capitalize() in SYMB2Z for e in self.elements):
             attrs.append(Elements(np.array(self.elements,
                          dtype=object), guessed=True))
-
+            warnings.warn(
+                "Element guessing has been added temporarily to the ITPParser "
+                "to preserve the previous behavior of guessing any masses of particles "
+                "that were not defined in the ITP file as we transition to the new "
+                "guessing API. This behavior will be removed in release 3.0. "
+                "Please see issue #4698 for more information. ",
+                DeprecationWarning
+            )
         else:
             warnings.warn("Element information is missing, elements attribute "
                           "will not be populated. If needed these can be "
